----------------------------------------------------------------------
 OmegaT 2.0.2 
----------------------------------------------------------------------
2.0.2 vs. 2.0.1

  3 Enhancements
  8 Bugfixes
----------------------------------------------------------------------
2.0.1 update 2

  Other enhancements:

  - Source and target segments are now, by default, left justified for LTR 
languages and right justified for RTL languages depending on the
languages of the project. It is still possible to switch with Shift+Ctrl+O,
which has now three states: 
- Justification according to languages (default)
- Justification on the left
- Justification on the right

  - Ctrl+Page up and Ctrl+Page down go to the beginning/end of a document 
(without entering the segment) 

  - Update of some user interface texts for clarification purposes

  Bug Fixes: 

  - Glossary: unclear display if combined entries contain a ","
  http://sourceforge.net/support/tracker.php?aid=2628490 

  - Bidi wrong justification
  http://sourceforge.net/support/tracker.php?aid=1383289 

  - OmegaT hangs at random
  http://sourceforge.net/support/tracker.php?aid=1762277  

  - Random hangs, exceptions in command line, nothing in log
  http://sourceforge.net/support/tracker.php?aid=1817830 

  - Confused display when RTL segment starts with LTR characters 
  http://sourceforge.net/support/tracker.php?aid=1898522  

  - Spellchecker slow down 
  http://sourceforge.net/support/tracker.php?aid=1908643 

  - Pattern after in Text files segmentation rule contained "\s+" instead
of " +"

  - The SkipMeta option in the HTML and XHTML filters was not initialised to 
the default value

----------------------------------------------------------------------
 OmegaT 2.0.1
----------------------------------------------------------------------
2.0.1 vs. 2.0.0 update 1

  9 Enhancements
  1 Bugfix

----------------------------------------------------------------------
2.0.1
  
  Implemented requests:
