@@ -473,8 +473,8 @@ PP_ERROR_UNABLE_TO_READ_PROJECT_FILE=Unable to read project file! \n
 # NewProjectDialog.java
 NP_INVALID_SOURCE_LOCALE=The source file language entered is invalid!\n
 
-NP_LOCALE_SUGGESTION=The language code should be in the form xx-YY or xx_YY, where \n\
-xx is the language code and YY is the region or country code (optional).
+NP_LOCALE_SUGGESTION=The language code should be in the form xx-YY, xxx-YY, xx_YY or xxx-YY, where \n\
+xx or xxx is the language code and YY is the region or country code (optional).
 
 NP_INVALID_TARGET_LOCALE=The translated file language entered is invalid!\n
 
