@@ -443,7 +443,7 @@ PP_ERROR_UNABLE_TO_READ_PROJECT_FILE=Impossible de lire le fichier projet ! \n
 # NewProjectDialog.java
 NP_INVALID_SOURCE_LOCALE=Le code pour la langue source n'est pas valide !\n
 
-NP_LOCALE_SUGGESTION=Le code langue doit \u00eatre de la forme suivante : xx_YY ou bien xx-YY,\no\u00f9 xx est un code langue g\u00e9n\u00e9rique et YY un code pays/r\u00e9gion, optionnel.
+NP_LOCALE_SUGGESTION=Le code langue doit \u00eatre de la forme suivante : xx_YY, xx-YY, xxx_YY ou xxx-YY,\no\u00f9 xx ou xxx est un code langue g\u00e9n\u00e9rique et YY un code pays/r\u00e9gion, optionnel.
 
 NP_INVALID_TARGET_LOCALE=Le code pour la langue cible n'est pas valide !\n
 
